--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TypescriptNodeJSStarter",
+  "name": "pparse",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -25,19 +25,20 @@
   "author": "Rıdvan Özaydın",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^9.4.0",
-    "jest": "^22.1.4",
-    "ts-jest": "^22.0.2"
-  },
-  "dependencies": {
     "@types/base-64": "^0.1.2",
     "@types/cheerio": "^0.22.7",
     "@types/node-forge": "^0.7.2",
     "@types/utf8": "^2.1.6",
+    "@types/aws-lambda": "0.0.31",
+    "@types/node": "^9.4.0",
+    "aws-sdk": "^2.193.0",
+    "jest": "^22.1.4",
+    "serverless-offline": "^3.17.0",
+    "serverless-plugin-typescript": "^1.1.5",
+    "ts-jest": "^22.0.2"
+  },
+  "dependencies": {
     "axios": "^0.17.1",
-    "base-64": "^0.1.0",
-    "cheerio": "^1.0.0-rc.2",
-    "node-forge": "^0.7.1",
-    "utf8": "^3.0.0"
+    "cheerio": "^1.0.0-rc.2"
   }
 }
