--- a/serverless.yml
+++ b/serverless.yml
@@ -20,6 +20,8 @@ service: pparse # NOTE: update this with your service name
 provider:
   name: aws
   runtime: nodejs6.10  
+  memorySize: 256 # optional, in MB, default is 1024
+  versionFunctions: false
   region: eu-central-1
   stage: dev
 
@@ -46,13 +48,14 @@ provider:
 # you can add packaging information here
 package:
   exclude:
-    - node_modules/**/*
-  include:
-    - src/aws-lambda/handler.ts
+    - dist/**
+  include:    
 
 functions:
   pparse:
-    handler: src/aws-lambda/handler.ts
+    handler: src/aws-lambda/handler.pparse
+    name: pparse-${self:provider.stage}
+    memorySize: 128
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
